--- a/src/style.css
+++ b/src/style.css
@@ -18,12 +18,12 @@ html {
     display: flex;
   }
 
-  img {
+  /* img {
       width: 100%;
       height: 100%;
-  }
+  } */
 
   p {
     font-family: 'Courier New', Courier, monospace;
-    color: #FFF
+    color: #bcbcbc
   }
